Fix on mobile

--- a/style.css
+++ b/style.css
@@ -18,3 +18,17 @@ body {
 h1,h2,h3 {
     line-height: 1.2
 }
+
+/* Make calendar responsive */
+.calendar iframe {
+    width: 100% !important;
+    max-width: 100%;
+    height: 400px;
+    border: none;
+}
+
+@media (min-width: 768px) {
+    .calendar iframe {
+        height: 600px;
+    }
+}
